# ghosttify

./: Cargo.toml  README.md  ghostty_keybinding_actions.txt  gnome_keybinding_actions.txt
.github/workflows/: automate_release_and_publish.yaml  rust-ci.yaml
src/: gnome_to_ghostty.json  gnome_to_ghostty_action.json  main.rs
