[package]
name = "ghosttify"
version = "1.0.0"
authors = ["Nathnael (Nati) Bekele nwtbekele@gmail.com"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/natibek/ghosttify"
description = "Rust CLI tool for converting gnome-terimal shortcuts to ghostty keybindings."
license = "Apache 2.0"

[dependencies]
rust-ini = "0.21.1"
dirs = "6.0.0"
colored = "3.0.0"
serde_json = "1.0.140"
regex = "1.11.1"
clap = {version = "4.5.31", features = ["derive"]}
